[gd_scene load_steps=4 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://health.tscn" type="PackedScene" id=2]
[ext_resource path="res://transitionshader.tscn" type="PackedScene" id=3]

[node name="HealthHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="all" type="Node2D" parent="."]
position = Vector2( 209.383, -17.6588 )

[node name="health" parent="all" instance=ExtResource( 2 )]
position = Vector2( 32, 32 )

[node name="health2" parent="all" instance=ExtResource( 2 )]
position = Vector2( 48, 32 )

[node name="health3" parent="all" instance=ExtResource( 2 )]
position = Vector2( 64, 32 )

[node name="Label" type="Label" parent="all"]
margin_left = 32.0
margin_top = 48.0
margin_right = 72.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restrtTimer" type="Timer" parent="all"]
wait_time = 5.0

[node name="Label2" type="Label" parent="all"]
margin_left = 474.0
margin_top = 19.0
margin_right = 514.0
margin_bottom = 33.0

[node name="transitionshader" parent="all" instance=ExtResource( 3 )]

[connection signal="timeout" from="all/restrtTimer" to="." method="_on_restrtTimer_timeout"]
